changed the password and user fill in on login.html

--- a/7/chung_victoria/login/login.html
+++ b/7/chung_victoria/login/login.html
@@ -6,8 +6,8 @@ Your username and/or password is incorrect. Please try again.
 {% endif %}
 
 <form method = "POST">
-Username: <input type="username" name="username" value="">
-Password: <input type="password" name="password" value="">
+Username: <input type="text" name="username">
+Password: <input type="text" name="password">
 <hr>
 
 <input type="submit" name="button" value="Login">
