--- a/login/6/lam_raymond_wu_jiasen/register.html
+++ b/login/6/lam_raymond_wu_jiasen/register.html
@@ -1,4 +1,5 @@
 <h1>Register</h1>
+{{message}}
 <form method = "POST">
 Username: <input type="text" name="username"><br>
 Password: <input type="text" name="password"><br>
