--- a/javascript/7/wan_takchi/magic.html
+++ b/javascript/7/wan_takchi/magic.html
@@ -4,9 +4,14 @@
 
 <h1> I can do magic with the button! </h1>
 
-<ul>
+<ol>
 <li>one</li>
 <li>two</li>
 <li>three</li>
 <li>four</li>
 <li>five</li>
+</ol>
+
+<input type="submit" value="Magic" id="b1">
+
+<script src="script.js"></script>
