--- a/javascript/7/wan_takchi/magic.html
+++ b/javascript/7/wan_takchi/magic.html
@@ -1,17 +1,35 @@
-<style>
-.blue {background-color:#ff0000;}
-</style>
+<html>
+  <head>
+    <title>Magic Button</title>
+       <style type="text/css">
+        body {
+         font-family:Arial;
+         padding:5px;
+        }
 
-<h1> I can do magic with the button! </h1>
+        ul { padding-left:100px; }
 
-<ol>
-<li>one</li>
-<li>two</li>
-<li>three</li>
-<li>four</li>
-<li>five</li>
-</ol>
+        ol {
+         font-size:15px;
+        }
+     button {
+         font-size:25px;
+        }
+      </style>
+    </head>
+  <body>
+    <h1> Tak Chi Wan pd 7</h1>
+ 
+  <ol>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+    <li>four</li>
+    <li>five</li>
+  </ol>
 
-<input type="submit" value="Magic" id="b1">
+  <input type="submit" value="Magic" id="b1">
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
+  </body>
+</html>
