--- a/javascript/7/wan_takchi/magic.html
+++ b/javascript/7/wan_takchi/magic.html
@@ -21,7 +21,7 @@
     <h1> Tak Chi Wan pd 7</h1>
  
   <ol>
-    <li>one</li>
+    <li style="color:blue;">one</li>
     <li>two</li>
     <li>three</li>
     <li>four</li>
