--- a/6/lin_jing/Javascript/IndexJS.html
+++ b/6/lin_jing/Javascript/IndexJS.html
@@ -3,12 +3,13 @@
     <head>
         <title>Jing's Javascript Day</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="stylesheet" type="text/css" href="Styling.css">
 
     </head>
     <body>
         <h3> Javascript Playing With Functions <h3>
             <ul>
-                <li style="color: orange;">A</li>
+                <li class="Orange">A</li>
                 <li>A</li>
                 <li>A</li>
                 <li>A</li>
@@ -21,7 +22,7 @@
 
         <input id="B1" type="submit" name="Up" value="UP" onClick="CycleUp()"></input>
         <input id="B2" type="submit" name="Down" value="DOWN" onClick="CycleDown()"></input>
-        
+
         <script type="text/javascript" src="Javascript.js"> </script>
 
     </body>
