--- a/7/xu_christine/javascript/list.html
+++ b/7/xu_christine/javascript/list.html
@@ -1,11 +1,8 @@
-<link href='http://fonts.googleapis.com/css?family=Arbutus' rel='stylesheet' type='text/css'>
-</link>
+
 
 <style>
 .pink      {color:#FF3399;}
 .purple  {color:#990066;}
-.blue    {color:#6666FF;}
-.font    {font-family:'Arbutus';}
 </style>
 
 <h1>Pandas are awesome</h1>
@@ -20,6 +17,6 @@
 
 </ul>
 
-<input type="submit" value="Button1" id="b1">
+<input type="submit" value="Click Me" id="b1">
 
 <script src="script.js"></script>
