--- a/6/rein_dorit/javascript/javascripthw.html
+++ b/6/rein_dorit/javascript/javascripthw.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <style>
-      .green {color:#339966;}
-    </style>
 
+<style>
+      .green {color:#339966;}
+</style>
+  
     <h1>Homework</h1>
     <p> Dorit Rein </p>
     <ul>
       <li> 1 </li>
       <li> 2 </li>
       <li> 3 </li>
-      <li> 4 </li>
+      <li> 4 </i>
       <li> 5 </li>
     </ul>
     <input id="button1" type="submit" name="colChange" onclick="colChange();"></input>
     <input id="button2" type="submit" name="colBack" onclick="colBack();"></input>
-
-
+  <script src="hw.js"></script>
   
-
-  </body>
-</html> 
+    
