--- a/6/rein_dorit/javascript/javascripthw.html
+++ b/6/rein_dorit/javascript/javascripthw.html
@@ -1,4 +1,3 @@
-
 <style>
       .green {color:#339966;}
 </style>
@@ -12,8 +11,7 @@
       <li> 4 </i>
       <li> 5 </li>
     </ul>
-    <input id="button1" type="submit" name="colChange" onclick="colChange();"></input>
-    <input id="button2" type="submit" name="colBack" onclick="colBack();"></input>
+    <input id="button1" type="submit" name="colChange" onclick="colChange();">Change Color</input>
   <script src="hw.js"></script>
   
     
