--- a/javascript/7/lin_hanson/index.html
+++ b/javascript/7/lin_hanson/index.html
@@ -5,17 +5,18 @@
     <style>
       .green{color:#00ff00;}
     </style>
-    <body>
-      <ol>
-	<li class="green">uno</li>
-	<li>dos</li>
-	<li>san</li>
-	<li>go</li>
-	<li>wu</li>
-	<li>liu</li>
-      </ol>
-      <button name= "button" id="press">Clickhere</button>
-      <script type="text/javascript" src="script.js"></script>
-    </body>
+  </head>
+  <body>
+    <ol>
+      <li class="green">uno</li>
+      <li>dos</li>
+      <li>san</li>
+      <li>go</li>
+      <li>wu</li>
+      <li>liu</li>
+    </ol>
+    <button name= "button" id="press">Clickhere</button>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
 
