--- a/javascript/7/lin_hanson/index.html
+++ b/javascript/7/lin_hanson/index.html
@@ -3,12 +3,12 @@
     <title> Javascript Assignment </title>
     <h2> A Button That Alternates Which Element Is Highlighted </h2>
     <style>
-      .green{color:#00ff00;}
+      .blue{color:BLUE;}
     </style>
   </head>
   <body>
     <ol>
-      <li class="green">uno</li>
+      <li class="blue">uno</li>
       <li>dos</li>
       <li>san</li>
       <li>go</li>
