--- a/7/xu_christine/javascript/list.html
+++ b/7/xu_christine/javascript/list.html
@@ -1,22 +1,24 @@
-
+<html>
 
 <style>
-.pink      {color:#FF3399;}
-.purple  {color:#990066;}
+	.pink {color:#FF3399;}
+	.purple {color:#990066;}
 </style>
 
-<h1>Pandas are awesome</h1>
+	<h1>Pandas are awesome</h1>
 
-<ul>
+	<ul>
 
-<li>Panda 1</li>
-<li>Panda 2</li>
-<li>Panda 3</li>
-<li>Panda 4</li>
-<li>Panda 5</li>
+		<li>Panda 1</li>
+		<li>Panda 2</li>
+		<li>Panda 3</li>
+		<li>Panda 4</li>
+		<li>Panda 5</li>
 
-</ul>
+	</ul>
 
-<input type="submit" value="Click Me" id="b1">
+	<input type="submit" value="Click Me" id="b1">
 
-<script src="script.js"></script>
+	<script src="script.js"></script>
+
+</html>
