--- a/6/Luo_Jason/javascripthw.html
+++ b/6/Luo_Jason/javascripthw.html
@@ -18,24 +18,35 @@
   }
   
   var elements = document.querySelectorAll('li');
-  var Index = 0;
-  var Item = elements[Index];
+  var current= 0;
+  var item= elements[current];
 
   function Up(){
-  green(Item);
-  Index--;
-  if(Index < 0) 
-             Index = elements.length - 1;
-	     Item = elements[Index % elements.length];
-	     green(Item);
-	     console.log("test");
-	     }
+  green(item);
+  if(current != 0) {
+             current--;
+             item = elements [ current % elements.length];
+             green(item); 
+                }
+  else {
+          current = elements.length - 1;
+          item = elements [ current % elements.length];
+          green(item);
+       }
+    }
 
 
-	     function Down() {
-	     green(Item);
-	     Index++;
-	     Item = elements[Index % elements.length];
-	     green(currentItem);
-	     }
+  function Down() {
+  if (current != 0){
+            green(item);
+            current++;
+            item = elements[current% elements.length];
+            green(item);
+                   }
+  else {
+            current++;
+            item = elements[current% elements.length];
+            green(item);
+       }
+   }
 	     </script>
