Added Cycle Color

--- a/javascript/6/zhen_jason/index.html
+++ b/javascript/6/zhen_jason/index.html
@@ -1,4 +1,7 @@
-<h1>Colors</h1>
+<h1>Cycles</h1>
+
+<h2>Cycle Num cycles through the list</h2>
+<h2>Cycle Color cycles through the colors red, blue, and green in that order</h2>
 
 <style>
 .red {color:  #ff0000;}
@@ -10,18 +13,13 @@
 </style>
 
 <ul>
+<li class="red">zero</li>
 <li>one</li>
 <li>two</li>
 <li>three</li>
 <li>four</li>
 </ul>
 
-<ol>
-<li>one</li>
-<li>two</li>
-<li>three</li>
-<li>four</li>
-</ol>
-
-<input id="button" type="submit" name="b"></input>
+<input id="Cycle Num" type="submit" value="Cycle Num"></input>
+<input id="Cycle Color" type="submit" value="Cycle Color"></input>
 <script src="script.js"></script>
