--- a/javascript/6/li_roger/buttons.html
+++ b/javascript/6/li_roger/buttons.html
@@ -1,6 +1,7 @@
 <ul><li></li><li></li><li></li><li></li><li></li></ul>
 <input type="button" value="cycle"
 	onclick="li=document.querySelectorAll('li');(typeof i=='undefined')?(i=0):0;li[i].className='';i=(i==li.length-1?0:i+1);li[i].className='a'" />
+	// this code is bad and you should feel bad
 <style>
 	*{margin:0;padding:0;}
 	li,input{margin:5px;padding:5px;background:#f77;list-style:none;display:block;width:50%;}
