Todo list working (the wrong way)

--- a/faketodo/7/burke_christopher/todo.html
+++ b/faketodo/7/burke_christopher/todo.html
@@ -1,1 +1,26 @@
 <h1>TODO LIST</h1>
+
+<h2>Things To-Do</h2>
+
+<ul>
+</ul>
+
+<br>
+
+<h2>Things Done</h2>
+
+<ul>
+</ul>
+
+<br>
+
+<h2>Add Thing To Do</h2>
+<form>
+  <input type="text" id="new">
+</form>
+
+
+<input type="button" value="Submit" id="submit">
+
+
+<script src="todo.js"></script>
