Changed default color to blue

--- a/faketodo/7/burke_christopher/todo.html
+++ b/faketodo/7/burke_christopher/todo.html
@@ -8,14 +8,14 @@
 
 <h2>Things To-Do</h2>
 
-<ul id="todo">
+<ul id="todo" class="blue">
 </ul>
 
 <br>
 
 <h2>Things Done</h2>
 
-<ul id="done">
+<ul id="done" class="blue">
 </ul>
 
 <br>
