--- a/faketodo/7/ezratty_maia/todo.html
+++ b/faketodo/7/ezratty_maia/todo.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1 class = "purple" >FakeToDo!!</h1>
+<h1 >FakeToDo!!</h1>
 
 <h2>To Do</h2>
 <ul id='todo'> </ul>
@@ -27,21 +27,15 @@ document.getElementById('done').appendChild(this);
 
 function addTask(){
 var task = document.getElementById('task').value;
-if (task.length &gt 0) {
+if (!task.length) return;
 var newLi = document.createElement("li");
-newLi.appendChild(document.createTextNode(task);
+var newVal = document.createTextNode(task);
+newLi.appendChild(newVal);
 newLi.addEventListener('click', completeTask);
-var list = document.getElementById('todo');
-list.appendChild(newListItem);    
+var list = document.getElementById('todo').appendChild(newLi); 
 document.getElementById('task').value = "";
-}
-else
-    return;
 }
     
 </script>
-<style>
-.purple {font color: "#660099"}
-</style>
 </body>
 </html>
