--- a/faketodo/7/wan_takchi/index.html
+++ b/faketodo/7/wan_takchi/index.html
@@ -1,11 +1,12 @@
-<h1>Fake To-Do</h1>
+<h1>Tak Chi's Fake To-Do</h1>
 
-<h2>Stuff To-Do:</h2>
+<h2>TODO:</h2>
 <ul id="todo">
 </ul>
-<h2>Finished:</h2>
+<h2>DONE:</h2>
 <ul id="finish">
 </ul>
+<h3>INPUT:</h3>
 <input type="text" id="things" value="">
 <button type="submit" id="submit">Submit</button>
 
