--- a/faketodo/7/rosenberg_noah/todo.html
+++ b/faketodo/7/rosenberg_noah/todo.html
@@ -2,23 +2,23 @@
 
 <h3>TODO:</h3>
 <ul id="todo" class="todo">
-  <li> item1 </li>
+
 </ul>
 
 <h3>DONE:</h3>
 <ul id="done" class="done">
-  <li> item2 </li>
+
 </ul>
 
 
 <h3>INPUT:</h3>
 <br>
-<input type="input" name="newItem">
+<input type="input" name="newItem" id = "newItem">
 <br>
-<input type="button" value="submit">
+<input type="button" value="submit" id="b1">
 
-<script src="script.js">
+<script src="script.js"></script>
 
 <style>
-  .red{color:#ff0000;}
+  .red{color:red;}
 </style>
