The REAL Last Drop

--- a/faketodo/6/wu_jia sen/index.html
+++ b/faketodo/6/wu_jia sen/index.html
@@ -15,7 +15,7 @@
 		<h2>I Did It!</h3>
 		<ul id="done">
 		</ul>
-		<input type="text" id="input"><br>
+		<input type="text" id="input" value="End Mr. Brown"><br>
 		<button id="button" type="submit" onclick="drop();">Drop!</input>
 		<p style="font-size:6px">Things dropped in the bucket cannot be removed.</p>
 		<script src="script.js"></script>
