finished faketodo list homework

--- a/faketodo/6/huang_edric/todolist.html
+++ b/faketodo/6/huang_edric/todolist.html
@@ -11,7 +11,7 @@
 
     <field>
       <input type="text" id="item"  placeholder="Add new item.">
-      <input type="submit" id="submit" onclick="addItem()" value="GO!">
+      <input type="submit" id="submit" onclick="addItem()" value="ADD!">
     </field>
 
     <h2>To-Do</h2>
